--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,6 +2,22 @@
   <h1>New Person</h1>
 </div>
 
+
+
+<%  if @person.errors.any? %>
+
+<%= pluralize(@person.errors.count, "error") %>
+    prohibited this person form being saved:
+
+<%= @person.errors.full_messages.each do |message| %>
+<li><%= :message %><li>
+
+<% end %>
+<% end %>
+
+
+
+
 <%= form_for @person, html: {class: "form-horizontal"} do |f| %>
   <div class="form-group">
     <%= f.label :first_name, class: "control-label col-sm-2" %>
